# thesis_control_digital_twin

./: LICENSE  README.md  no-tuning-pera-enough.fig
master_ros/python_control/: package.xml
master_ros/python_control/launch/: python_launch.launch
master_ros/python_control/scripts/: 2dof.py  save_data.txt  trial.py
master_ros/robot2_control/config/: PERA_control.yaml  SDOF_control.yaml
master_ros/robot2_control/launch/: SDOF_control.launch
master_ros/robot2_description/: CMakeLists.txt  package.xml
master_ros/robot2_gazebo/: CMakeLists.txt
master_ros_matlab/: pera_ros.slx  quanser.slx
python_control/: CMakeLists.txt
python_control/launch/: PERA_launch.launch  SDOF_launch.launch  staubli_launch.launch
python_control/scripts/: haiwen_trial  master_scripts.py  position_controller.py  position_controller_2.py  position_controller_3.py  staubli_6dof.py  trial_2.py
robot2_control/: CMakeLists.txt  package.xml
robot2_control/config/: robot2_control.yaml  staubli_control.yaml
robot2_control/launch/: PERA_control.launch  robot2_control.launch  staubli_control.launch
robot2_description/launch/: PERA_rviz.launch  planar_rviz.launch
robot2_description/meshes/: arm_link1.part  arm_link1_visual.stl  arm_link2.part  arm_link2.stl  arm_link22.part  arm_link2_collision.stl  arm_link2_visual.stl  base.part  base.stl  base_visual.stl
robot2_description/urdf/: PERA (copy).xacro  PERA.xacro  config.json  robot2.xacro  robot2_2.xacro
robot2_gazebo/: package.xml
robot2_gazebo/launch/: SDOF_world.launch  staubli_world.launch
(+32 files in other folders)
