<package>
  <name>robot2_gazebo</name>
  <version>0.1.0</version>
  <description>robot2_gazebo</description>
  <license>TODO</license>
    <maintainer email="candel@todo.todo">candel</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot2_control</run_depend>
  <run_depend>robot2_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
